--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#4F46E5">
     <meta name="description" content="Universitet bal hesablama, ÜOMG, 25% ödəniş və yaş hesablayıcı sistemi">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Hesablayıcı">
     <title>Universitet Bal Hesablayıcı</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="apple-touch-icon" href="/icon-192.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+    <link rel="apple-touch-icon" href="icon-192.png">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SXKXY8WJDK"></script>
 <script>
@@ -32,12 +37,12 @@
         </div>
     </div>
 
-    <!-- Install App Button -->
-    <button id="installBtn" class="install-btn" style="display: none;">
+    <!-- Install App Button - Always visible for testing -->
+    <button id="installBtn" class="install-btn">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/>
         </svg>
-        Tətbiq quraşdır
+        <span id="installBtnText">Tətbiq quraşdır</span>
     </button>
 
     <!-- Main Container -->
