--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <h1 class="calc-title">ÜOMG Hesablama</h1>
         
         <div class="input-group">
-            <label>Fənn sayını daxil edin:</label>
-            <input type="number" id="subjectCount" min="1" max="20" placeholder="Məsələn: 8">
+            <label>Fənn sayını daxil edin (maksimum 8):</label>
+            <input type="number" id="subjectCount" min="1" max="8" placeholder="Məsələn: 8">
             <button onclick="generateSubjectInputs()" class="generate-btn">Yarat</button>
         </div>
 
